@@ -28,6 +28,7 @@ documents those changes that are of interest to users and administrators.
     that contain node counts.
  -- Prevent deadlocked slurmstepd processes due to unsafe use of regcomp with
     older glibc versions.
+ -- Fix squeue when SLURM_BITSTR_LEN=0 is set in the user environment.
 
 * Changes in Slurm 16.05.9
 ==========================
